[package]
name = "stupid_gfx"
version = "0.2.1"
authors = ["alloncm <alloncm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.33.0", features = ["bundled", "static-link","unsafe_textures"]}
